[package]
name = "fiuba_coin"
version = "0.1.0"
authors = ["azowyl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
rand = "0.7"
crypto-hash = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "1.0.98"
lazy_static = "1.4.0"